gitlab-ce/kubernetes/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: ci
spec:
  ports:
  - name: ssh 
    protocol: TCP
    port: 22
    targetPort: 22
  - name: http  
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: registry
    protocol: TCP
    port: 5000
    targetPort: 50000
  type: CLusterIP
  selector:
    app: gitlab-ce
