gitlab-ce/kubernetes/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: ci
  #traefik
  #annotations:
  #  kubernetes.io/ingress.class: traefik
  #  ingress.kubernetes.io/auth-type: "basic"
  #  ingress.kubernetes.io/auth-secret: "mysecret"
  #nginx
  #annotations:
  #  nginx.ingress.kubernetes.io/auth-type: basic
  #  nginx.ingress.kubernetes.io/auth-secret: basic-auth
  #  nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - user1"
spec:
  rules:
  - host: git.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
